--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:h2:mem:demo-lib-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 spring.datasource.username = sa
@@ -9,3 +11,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+server.port=8080
+server.servlet.context-path=/
+
+
+
